fix margins and spacing in boardpage

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  height: 100%;
-}
+
+
